chore: escape Lucene query values with the shared helper (#181)
Refs: SchweizerischeBundesbahnen/ch.sbb.polarion.extension.generic/issues/690